# queue_as_dataset

./: .gitignore  README.md  example_urls.csv  generate_wikipedia_urls.py  main.py  monitor_progress.sh  performance_report.py  pyproject.toml  threaded_worker_test.py  wikipedia_100.csv  wikipedia_1000.csv
.github/workflows/: test.yml
frontend/: index.html
queue_processor/: __init__.py  api.py  beam_worker.py  models.py  puller.py  queue.py  stats_worker.py  worker.py
tests/: test_queue.py  test_worker.py
