[project]
name = "queue-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "apache-beam>=2.69.0",
    "beautifulsoup4>=4.14.2",
    "datasets>=4.0.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "wandb>=0.23.0",
]
